src-ken&y/objects/Supplier_Payment__c.object
<CustomObject>
    <customHelpPage>HelpSupplierPayments</customHelpPage>
    <description>Pay supplier invoices</description>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Company__r.Address__r.BillingStreet &amp; &quot;,&quot; &amp; 
Company__r.Address__r.BillingCity &amp; &quot;,&quot; &amp; 
Company__r.Address__r.BillingState  &amp; &quot;,&quot; &amp;Company__r.Address__r.BillingPostalCode  &amp; &quot;,&quot; &amp;   Company__r.Address__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_In_Words__c</fullName>
        <description>Amount on check in words</description>
        <label>Amount In Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Bank_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Supplier Payments</relationshipLabel>
        <relationshipName>Supplier_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Job_ID__c</fullName>
        <label>Batch Job ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <inlineHelpText>Check number for this payment.</inlineHelpText>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_Sequence_Number__c</fullName>
        <description>Value assigned to payment for printing checks or matching and reconciling to bank transactions</description>
        <formula>''</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check Sequence Number.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company with which this supplier payment is associated with</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Supplier Payments</relationshipLabel>
        <relationshipName>Supplier_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Supplier Payment Currency</relationshipLabel>
        <relationshipName>Supplier_Payment_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <description>Date of Payment</description>
        <inlineHelpText>Date of payment (date on check). This field determines the transaction date for accounting purposes.</inlineHelpText>
        <label>Date Paid</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Printed__c</fullName>
        <description>The date when check is printed/ re-printed.</description>
        <inlineHelpText>Date on which the check was printed/reprinted.</inlineHelpText>
        <label>Date Printed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <description>Finalized Date is the date when the document is finalized.</description>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finalized flag is set to true when the record is finalized and no changes to the record are expected.</description>
        <inlineHelpText>A check mark indicates that the document is final. Kenandy will automatically generate an accounting entry for it in the next scheduled batch process.</inlineHelpText>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT PUT on page layout, it is hidden field to control user click.</description>
        <label>Finalized Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A check mark indicates that the work order is ready to be merged into a PDF document.</inlineHelpText>
        <label>Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Accounting_Entries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check mark indicates that accounting entries have been generated.</description>
        <label>Payment Accounting Entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>Amount of payment</description>
        <label>Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method_G__c</fullName>
        <description>mode of payment</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>Method of payment</description>
        <label>DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>OnLine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Number__c</fullName>
        <description>Payment Number for this supplier payment</description>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Value, such as a check or wire transfer number, assigned to payment for tracking through payment system</description>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remittance_Address__c</fullName>
        <formula>IF ( NOT( OR(ISNULL(Supplier__r.Address__c) ,ISBLANK(Supplier__r.Address__c))),(Supplier__r.Address__r.BillingStreet &amp; &quot;,&quot; &amp; 
Supplier__r.Address__r.BillingCity &amp; &quot;,&quot; &amp; 
Supplier__r.Address__r.BillingState &amp; &quot;,&quot; &amp; Supplier__r.Address__r.BillingPostalCode &amp; &quot;,&quot; &amp; Supplier__r.Address__r.BillingCountry), 
( Supplier_Street__c &amp; 
(if ( OR(ISNULL(Supplier_Street_1__c ),ISBLANK(Supplier_Street_1__c )),&quot;&quot;,&quot;,&quot; &amp; Supplier_Street_1__c )) &amp; 
(if ( OR(ISNULL(Supplier_Street_2__c ),ISBLANK(Supplier__r.Street_2__c )),&quot;&quot;, &quot;,&quot; &amp; Supplier_Street_2__c)) 
&amp; (if ( OR(ISNULL(Supplier_City__c ),ISBLANK(Supplier_City__c )),&quot;&quot;, &quot;,&quot; &amp; Supplier_City__c )) 
&amp; (if ( OR(ISNULL(Supplier_State__c ),ISBLANK(Supplier_State__c )),&quot;&quot;, &quot;,&quot; &amp; Supplier_State__c )) 
&amp; (if ( OR(ISNULL(Supplier_Postal_Code__c ),ISBLANK(Supplier_Postal_Code__c )),&quot;&quot;, &quot;,&quot; &amp; Supplier_Postal_Code__c )) 
&amp; (if ( OR(ISNULL(Supplier__r.Supplier_Country__c ),ISBLANK(Supplier__r.Supplier_Country__c )),&quot;&quot;, &quot;,&quot; &amp; Supplier__r.Supplier_Country__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remittance Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Source Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <description>detail reasons for status will be stored</description>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Void from Overflow Advice</fullName>
                </value>
                <value>
                    <fullName>Zero Amount Payment Creation Not Allowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of transaction</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Unapproved</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Wire request submitted, payment pending</fullName>
                </value>
                <value>
                    <fullName>Wire request submitted, payment confirmed</fullName>
                </value>
                <value>
                    <fullName>Void payment</fullName>
                </value>
                <value>
                    <fullName>Paid and reconciled</fullName>
                </value>
                <value>
                    <fullName>Unreconciled</fullName>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_City__c</fullName>
        <description>Supplier City</description>
        <label>Supplier City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Country__c</fullName>
        <description>Supplier Country</description>
        <label>Supplier Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Postal_Code__c</fullName>
        <description>Supplier Postal Code</description>
        <label>Supplier Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_State__c</fullName>
        <description>Supplier State</description>
        <label>Supplier State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Street_1__c</fullName>
        <description>Supplier Street1</description>
        <label>Supplier Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Street_2__c</fullName>
        <description>Supplier Street2</description>
        <label>Supplier Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Street__c</fullName>
        <description>Supplier Street</description>
        <label>Supplier Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier for whom this payment will be applied against</description>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Supplier Payments</relationshipLabel>
        <relationshipName>Supplier_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Lines__c</fullName>
        <label>Total Number of Lines</label>
        <summaryForeignKey>Supplier_Payment_Line__c.Supplier_Payment__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Transaction currency for this supplier payment</description>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date of the transaction, this could be populated from any source using a workflow depending on customer need.</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <label>Void Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Supplier Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Date_Paid__c</columns>
        <columns>Reference__c</columns>
        <columns>Payment_Method_G__c</columns>
        <columns>Status__c</columns>
        <columns>Finalized__c</columns>
        <columns>Batch_Job_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supplier Payment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BA_Currency_and_SI_Currency_match</fullName>
        <active>true</active>
        <description>Bank account selected for the payment must have a currency that matches the currencies on the invoices</description>
        <errorConditionFormula>Bank_Account__r.Currency__c  &lt;&gt;  Currency__c</errorConditionFormula>
        <errorMessage>The invoices and credit memos you select to pay must have the same company and currency as your disbursement bank account. You need to review and change your selections.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancelled_not_Finalized</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c) == &apos;Cancelled&apos; &amp;&amp; Finalized__c</errorConditionFormula>
        <errorDisplayField>Finalized__c</errorDisplayField>
        <errorMessage>You cannot Finalize a Supplier Payment that has been cancelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Cannot_Change</fullName>
        <active>true</active>
        <description>This rule requires the payment amount does not change once the status has moved past &quot;Unapproved&quot;</description>
        <errorConditionFormula>NOT( OR(ISPICKVAL( Status__c , &apos;Unapproved&apos; ),ISPICKVAL( Status__c , &apos;Cancelled&apos; ))) &amp;&amp; (ISCHANGED( Supplier__c  ) ||
ISCHANGED( Payment_Method_G__c  ) || 
ISCHANGED(  Bank_Account__c   ) || 
ISCHANGED(   Status_Reason__c     ) || 
ISCHANGED( Company__c   ))</errorConditionFormula>
        <errorMessage>You cannot change the payment details once the payment status has moved past &quot;Unapproved&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Void_and_Finalized</fullName>
        <active>true</active>
        <errorConditionFormula>Void__c &amp;&amp; !Finalized__c</errorConditionFormula>
        <errorMessage>This Supplier Payment must be Finalized in order to Void</errorMessage>
    </validationRules>
</CustomObject>